[package]
name = "visa-sys"
version = "0.1.4"
authors = ["ITOAR <itoar@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TsuITOAR/visa-sys"
homepage = "https://github.com/TsuITOAR/visa-sys"
description = "FFI bind to VISA(Virtual Instrument Software Architecture) library"
exclude = ["/sample.rs", "/.vscode"]

[dependencies]

[build-dependencies]
bindgen = { version = "^0.59", optional = true }
